[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localagi"
version = "0.0.1"
authors = [
  { name="Ettore Di Giacinto", email="mudler@localai.io" },
]
description = "LocalAGI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mudler/LocalAGI"
"Bug Tracker" = "https://github.com/mudler/LocalAGI/issues"